force-app/main/default/objects/Status_Survey__c/Status_Survey__c.object-meta.xml
<CustomObject>
    <label>Status Survey</label>
    <nameField>
        <displayFormat>s-{000}</displayFormat>
        <label>Status Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>