force-app/main/default/objects/Status_Survey__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>