force-app/main/default/objects/Status_Survey__c/fields/Current_Demand_for_Salesforce_implement__c.field-meta.xml
<CustomField>
    <fullName>Current_Demand_for_Salesforce_implement__c</fullName>
    <label>Current Demand for Salesforce implement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low pace</fullName>
            </value>
            <value>
                <fullName>Medium pace</fullName>
            </value>
            <value>
                <fullName>High pace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>