force-app/main/default/objects/Status_Survey__c/fields/Scope_for_future_salesforce_implement__c.field-meta.xml
<CustomField>
    <fullName>Scope_for_future_salesforce_implement__c</fullName>
    <label>Scope for future salesforceimplement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Not decided</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Suggestions required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>