force-app/main/default/objects/Status_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Current_Demand_for_Salesforce_implement__c</columns>
    <columns>Scope_for_future_salesforce_implement__c</columns>
    <columns>Additional_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>